// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uva test default PATIENT basal  with gla 30 should generate flat sgv 1`] = `
Object {
  "Gp": 174.37007296953632,
  "Gt": 131.17997187028692,
  "I_": 40.61860038487993,
  "Il": 1.9763325953633464,
  "Ip": 2.0309722602744666,
  "Isc1": 55.027252745582075,
  "Isc2": 49.58499694665628,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 3.1046599063967197,
  "XL": 40.61196071438584,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal  with gla 30 should generate flat sgv 2`] = `
Array [
  100.00004341832874,
  100.00063926373056,
  100.00252725636639,
  100.00601669402415,
  100.01099554434907,
  100.01710944569565,
  100.02389868149535,
  100.03087838192683,
  100.0375807372491,
  100.04357557416272,
  100.04847929650376,
  100.05195768468967,
  100.05372546128412,
  100.05354415428017,
  100.0512190784006,
  100.04659588782322,
  100.03955696133411,
  100.03001777658238,
  100.01792337074566,
  100.00324494910879,
  99.98597668011982,
  99.96613269998977,
  99.94374433900344,
  99.91885757384973,
  99.89153070455808,
  99.8618322504741,
  99.8298390567432,
  99.79563460072384,
  99.75930748641643,
  99.72095011421546,
  99.68065751294073,
  99.63852632108264,
  99.59465390442364,
  99.5491375976088,
  99.50207405778079,
  99.45355871902687,
  99.40368533707495,
  99.35254561439477,
  99.30022889659169,
  99.2468219317042,
  99.19240868472603,
  99.137070200355,
  99.08088450762277,
  99.02392656067454,
  98.96626821054504,
  98.90797820331426,
  98.84912220052556,
  98.78976281820653,
  98.72995968125352,
  98.66976949032609,
  98.60924609874533,
  98.5484405972067,
  98.48740140440381,
  98.42617436191524,
  98.36480283193691,
  98.30332779664771,
  98.24178795817886,
  98.18021983831892,
  98.11865787723063,
  98.0571345305815,
  97.99568036460026,
  97.93432414866939,
  97.87309294514667,
  97.81201219618362,
  97.75110580737015,
  97.69039622808954,
  97.62990452851439,
  97.56965047321262,
  97.50965259136608,
  97.4499282436311,
  97.39049368569407,
  97.3313641285923,
  97.27255379588557,
  97.21407597777647,
  97.15594308228424,
  97.09816668358509,
  97.04075756763615,
  96.98372577520162,
  96.92708064240244,
  96.87083083890991,
  96.81498440390303,
  96.75954877990684,
  96.70453084462774,
  96.64993694089699,
  96.59577290483124,
  96.54204409231502,
  96.48875540390526,
  96.43591130825416,
  96.38351586414286,
  96.33157274121228,
  96.2800852394755,
  96.22905630768929,
  96.17848856065962,
  96.12838429555133,
  96.07874550726802,
  96.02957390296397,
  95.98087091574678,
  95.93263771762501,
  95.88487523175206,
  95.83758414401395,
  95.79076491400568,
  95.74441778543745,
  95.6985427960097,
  95.65313978679241,
  95.60820841114281,
  95.5637481431919,
  95.51975828592852,
  95.47623797890783,
  95.43318620560923,
  95.3906018004654,
  95.34848345558467,
  95.30682972718574,
  95.26563904176257,
  95.22490970199634,
  95.18463989242984,
  95.1448276849179,
  95.10547104386747,
  95.06656783127913,
  95.02811581160095,
  94.99011265640497,
  94.95255594889579,
  94.91544318826004,
  94.87877179386403,
  94.84253910930778,
  94.80674240634183,
  94.77137888865293,
  94.73644569552462,
  94.70193990537818,
  94.6678585391983,
  94.63419856384891,
  94.60095689528258,
  94.56813040164788,
  94.53571590629858,
  94.50371019070745,
  94.47210999728838,
  94.44091203212962,
  94.41011296764101,
  94.3797094451177,
  94.34969807722266,
  94.32007545039117,
  94.29083812715818,
  94.26198264841159,
  94.2335055355732,
  94.2054032927092,
  94.17767240857171,
  94.15030935857365,
  94.1233106066981,
  94.09667260734413,
  94.07039180711031,
  94.04446464651771,
  94.01888756167344,
  93.9936569858765,
  93.96876935116714,
  93.9442210898211,
  93.92000863578976,
  93.89612842608788,
  93.87257690212988,
  93.84935051101608,
  93.82644570676982,
  93.80385895152651,
  93.78158671667651,
  93.7596254839621,
  93.73797174652995,
  93.71662200994041,
  93.69557279313406,
  93.67482062935754,
  93.65436206704872,
  93.63419367068265,
  93.61431202157934,
  93.59471371867444,
  93.57539537925342,
  93.55635363965035,
  93.53758515591257,
  93.51908660443166,
  93.50085468254194,
  93.4828861090872,
  93.46517762495685,
  93.44772599359194,
  93.43052800146229,
  93.41358045851524,
  93.39688019859713,
  93.38042407984825,
  93.36420898507163,
  93.3482318220773,
  93.33248952400193,
  93.3169790496054,
  93.30169738354407,
  93.2866415366224,
  93.27180854602315,
  93.25719547551716,
  93.24279941565266,
  93.228617483926,
  93.2146468249331,
  93.20088461050338,
  93.18732803981628,
  93.1739743395007,
  93.16082076371889,
  93.14786459423406,
  93.13510314046367,
  93.12253373951788,
  93.11015375622416,
  93.0979605831388,
  93.08595164054525,
  93.07412437644042,
  93.06247626650887,
  93.05100481408573,
  93.03970755010897,
  93.02858203306093,
  93.01762584889984,
  93.00683661098209,
  92.99621195997503,
  92.98574956376117,
  92.97544711733413,
  92.96530234268641,
  92.95531298868976,
  92.94547683096825,
  92.93579167176468,
  92.92625533979991,
  92.91686569012683,
  92.90762060397758,
  92.89851798860602,
  92.88955577712426,
  92.88073192833473,
  92.87204442655724,
  92.86349128145203,
  92.85507052783805,
  92.84678022550807,
  92.83861845903957,
  92.83058333760269,
  92.82267299476476,
  92.81488558829199,
  92.80721929994823,
  92.79967233529167,
  92.79224292346885,
  92.7849293170066,
  92.77772979160234,
  92.77064264591222,
  92.76366620133795,
  92.75679880181231,
  92.75003881358316,
]
`;

exports[`uva test default PATIENT basal 0.70 from PROFILE should generate flat sgv 1`] = `
Object {
  "Gp": 186.79258235613025,
  "Gt": 141.43742162834323,
  "I_": 37.776007480446765,
  "Il": 1.827759122422773,
  "Ip": 1.8888017206357495,
  "Isc1": 51.28205128204566,
  "Isc2": 46.21020005621574,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 0.2612491440926876,
  "XL": 37.77575534490338,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.70 from PROFILE should generate flat sgv 2`] = `
Array [
  100.00004443966257,
  100.00066279085601,
  100.00266472677394,
  100.00647965292272,
  100.01215279062865,
  100.01950984994552,
  100.0282814763839,
  100.03817343912634,
  100.04890127344669,
  100.06020541051817,
  100.07185642672918,
  100.08365555820106,
  100.09543308312013,
  100.10704584710473,
  100.11837454088408,
  100.12932101251374,
  100.13980573782939,
  100.14976549681077,
  100.15915126754811,
  100.1679263328666,
  100.1760645873536,
  100.18354902969773,
  100.19037042455558,
  100.1965261184764,
  100.20201899518909,
  100.2068565565255,
  100.2110501162832,
  100.21461409535772,
  100.2175654074674,
  100.21992292573617,
  100.22170702128383,
  100.2229391657998,
  100.22364159084127,
  100.22383699730356,
  100.22354830916171,
  100.22279846617825,
  100.22161025081903,
  100.2200061451166,
  100.218008213674,
  100.21563800941419,
  100.21291649905288,
  100.20986400561065,
  100.20650016558483,
  100.2028438986757,
  100.19891338820884,
  100.19472607061749,
  100.19029863254632,
  100.18564701431679,
  100.18078641865218,
  100.17573132370215,
  100.1704954995328,
  100.16509202735878,
  100.15953332089495,
  100.15383114929145,
  100.14799666119357,
  100.1420404095367,
  100.13597237674638,
  100.1298020000656,
  100.12353819677894,
  100.11718938914154,
  100.11076352885797,
  100.10426812098449,
  100.09771024715637,
  100.09109658806315,
  100.08443344511481,
  100.0777267612589,
  100.07098214092184,
  100.06420486906043,
  100.05739992931885,
  100.0505720212961,
  100.04372557693387,
  100.0368647760423,
  100.02999356098405,
  100.02311565054248,
  100.01623455299983,
  100.00935357845655,
  100.00247585042133,
  99.99560431670507,
  99.98874175964959,
  99.98189080572492,
  99.97505393452681,
  99.96823348720646,
  99.96143167436372,
  99.95465058343443,
  99.94789218560112,
  99.94115834225603,
  99.93445081104359,
  99.9277712515087,
  99.92112123037623,
  99.91450222648544,
  99.90791563540208,
  99.90136277373001,
  99.89484488314248,
  99.88836313415241,
  99.88191862963998,
  99.87551240815424,
  99.86914544700512,
  99.86281866516079,
  99.85653292596402,
  99.85028903968126,
  99.8440877658963,
  99.83792981575982,
  99.83181585410594,
  99.82574650144508,
  99.8197223358427,
  99.8137438946922,
  99.80781167638985,
  99.80192614191913,
  99.79608771635138,
  99.7902967902684,
  99.7845537211135,
  99.7788588344756,
  99.77321242531175,
  99.76761475911238,
  99.76206607301327,
  99.7565665768584,
  99.75111645421637,
  99.74571586335496,
  99.74036493817522,
  99.73506378910875,
  99.72981250398043,
  99.72461114883853,
  99.71945976875483,
  99.71435838859595,
  99.70930701376832,
  99.70430563093754,
  99.69935420872459,
  99.69445269837917,
  99.68960103443193,
  99.68479913532677,
  99.6800469040339,
  99.6753442286446,
  99.6706909829488,
  99.66608702699583,
  99.6615322076395,
  99.65702635906766,
  99.6525693033174,
  99.6481608507757,
  99.64380080066674,
  99.63948894152591,
  99.635225051661,
  99.631008899601,
  99.62684024453317,
  99.62271883672786,
  99.61864441795257,
  99.61461672187448,
  99.61063547445232,
  99.60670039431783,
  99.60281119314672,
  99.59896757601963,
  99.59516924177323,
  99.59141588334181,
  99.58770718808917,
  99.58404283813147,
  99.58042251065089,
  99.5768458782006,
  99.57331260900081,
  99.56982236722624,
  99.56637481328556,
  99.56296960409232,
  99.55960639332788,
  99.55628483169639,
  99.55300456717228,
  99.54976524523984,
  99.54656650912555,
  99.54340800002305,
  99.54028935731091,
  99.53721021876353,
  99.53417022075496,
  99.53116899845617,
  99.52820618602554,
  99.52528141679332,
  99.52239432343907,
  99.51954453816359,
  99.51673169285432,
  99.5139554192453,
  99.51121534907072,
  99.50851111421336,
  99.50584234684733,
  99.50320867957521,
  99.50060974556027,
  99.49804517865323,
  99.49551461351416,
  99.49301768572944,
  99.49055403192392,
  99.48812328986834,
  99.4857250985825,
  99.48335909843365,
  99.48102493123068,
  99.47872224031418,
  99.47645067064248,
  99.47420986887332,
  99.47199948344216,
  99.46981916463652,
  99.46766856466634,
  99.46554733773137,
  99.46345514008463,
  99.46139163009278,
  99.45935646829311,
  99.45734931744745,
  99.45536984259282,
  99.45341771108941,
  99.45149259266552,
  99.44959415945962,
  99.44772208605974,
  99.44587604954052,
  99.44405572949725,
  99.44226080807783,
  99.44049097001219,
  99.43874590263948,
  99.43702529593295,
  99.43532884252286,
  99.4336562377171,
  99.43200717952003,
  99.43038136864914,
  99.4287785085501,
  99.42719830540993,
  99.42564046816848,
  99.4241047085279,
  99.4225907409612,
  99.42109828271855,
  99.41962705383257,
  99.41817677712207,
  99.41674717819429,
  99.41533798544589,
  99.41394893006287,
  99.412579746019,
  99.41123017007324,
  99.40989994176597,
  99.40858880341429,
  99.40729650010601,
  99.40602277969315,
  99.40476739278398,
  99.40353009273444,
  99.40231063563881,
  99.40110878031925,
  99.3999242883148,
  99.39875692386974,
  99.39760645392083,
  99.39647264808445,
  99.39535527864258,
  99.39425412052856,
  99.39316895131206,
  99.39209955118365,
  99.39104570293875,
  99.39000719196123,
  99.38898380620637,
  99.38797533618362,
  99.38698157493883,
  99.3860023180361,
  99.38503736353935,
  99.38408651199344,
  99.38314956640522,
  99.38222633222396,
  99.38131661732197,
  99.38042023197447,
  99.37953698883956,
  99.37866670293792,
  99.3778091916325,
  99.3769642746075,
  99.3761317738479,
  99.37531151361833,
  99.37450332044202,
  99.37370702307965,
  99.37292245250826,
  99.37214944189974,
  99.37138782659933,
  99.37063744410446,
  99.36989813404301,
  99.36916973815205,
  99.36845210025609,
  99.36774506624555,
  99.36704848405543,
  99.36636220364363,
  99.36568607696961,
  99.36501995797265,
  99.36436370255078,
  99.36371716853915,
  99.36308021568888,
  99.36245270564582,
  99.36183450192925,
  99.36122546991093,
  99.36062547679391,
  99.36003439159185,
  99.35945208510802,
  99.35887842991472,
  99.35831330033248,
  99.35775657240971,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 1`] = `
Object {
  "Gp": 80.04810422214628,
  "Gt": 40.28697248590791,
  "I_": 208.42877476055517,
  "Il": 44.76743838707893,
  "Ip": 19.99316654766212,
  "Isc1": 176.40956260401776,
  "Isc2": 254.25793769144948,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 338.01703372002186,
  "XL": 87.38616640758718,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 2`] = `
Array [
  100.00004264161005,
  100.0006213714681,
  100.00242271052365,
  99.99792384675492,
  99.90673296498714,
  99.59909800024302,
  98.96215339822214,
  97.91534156519907,
  96.41177823388135,
  94.43520509098101,
  91.9954279300371,
  89.12335312196704,
  85.86608792575532,
  82.2823120235828,
  78.43802110801597,
  74.40270126465836,
  70.245978842596,
  66.03478650703819,
  61.83108190049705,
  57.69014483856612,
  53.65945990503258,
  49.77816473540069,
  46.07701388000602,
  42.57877884156717,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 1`] = `
Object {
  "Gp": 237.71160477794848,
  "Gt": 164.04949378844253,
  "I_": 139.04962760701002,
  "Il": 6.451626007441896,
  "Ip": 5.589723471118134,
  "Isc1": 84.810779553499,
  "Isc2": 129.8627622012441,
  "Qgut": 1176.0809941175373,
  "Qsto1": 13.363407253453056,
  "Qsto2": 1026.1103826643443,
  "W": 0,
  "X": 109.21648810360648,
  "XL": 96.18453805076754,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00022145358407,
  99.93352251449454,
  99.70549349667368,
  99.36967894376468,
  100.12142808950391,
  103.10274182257979,
  108.28238455043054,
  115.10910078366179,
  122.90477989974627,
  131.03493344770885,
  138.97454040663996,
  146.32505688416595,
  152.80894987326482,
  158.25447083286465,
  162.57702855942043,
  165.760420781662,
  167.83955847117625,
  168.88541457348984,
  168.99242331502975,
  168.2682845298544,
  166.8259925843457,
  164.77784871243082,
  162.2311904881151,
  159.28556339940982,
  156.03106083916649,
  152.5475704853508,
  148.90468787540897,
  145.16209051040914,
  141.37020408761003,
  137.57103153082514,
  133.79905117742422,
  130.0821202677148,
  126.44234296699388,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 1`] = `
Object {
  "Gp": 432.6247096665882,
  "Gt": 340.46068896209886,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 480.2344473447339,
  "Qsto1": 2.505580166758789,
  "Qsto2": 400.20308230431124,
  "W": 0,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 2`] = `
Array [
  100.13725958657677,
  101.66671679221494,
  105.76653288723423,
  112.42478387876761,
  121.10152166645324,
  131.12795040323837,
  141.8782273587602,
  152.83298434722747,
  163.59258009768376,
  173.8683851820691,
  183.46456829131233,
  192.2480304575594,
  200.15852177726111,
  207.1822441277268,
  213.33515276775458,
  218.65386189514217,
  223.18842688918403,
  226.99680439514734,
  230.1407204863062,
  232.6826763233896,
  234.6838488240752,
  236.2026811005261,
  237.29399475996456,
  238.00848980906625,
  238.39252662459808,
  238.48810819955128,
  238.3330000986862,
  237.96094088512334,
  237.40190785256956,
  236.68241230710095,
  235.82580590329954,
  234.85258508686033,
  233.78068488924404,
  232.6257564527501,
  231.40142497292766,
  230.119526418398,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 1`] = `
Object {
  "Gp": 707.55656999924,
  "Gt": 452.78248957686606,
  "I_": 37.63501554830254,
  "Il": 1.8712006820591789,
  "Ip": 1.9328330272679328,
  "Isc1": 53.96902765394085,
  "Isc2": 47.19081523736483,
  "Qgut": 29204.67595082871,
  "Qsto1": 6082.262534675929,
  "Qsto2": 41798.94434707729,
  "W": 0,
  "X": 0.5224347663442177,
  "XL": 37.49672892692031,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00602685486191,
  100.01102094323277,
  100.0171621292742,
  100.43564333859274,
  105.02927190399573,
  117.32987768907162,
  137.3006307191245,
  163.32314847852822,
  193.38954209090733,
  225.58199479759315,
  258.3540533640414,
  290.5296655468007,
  321.26333383006187,
  349.9882539271432,
  376.3598776591702,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 1`] = `
Object {
  "Gp": 118.84153617067572,
  "Gt": 81.43288793763907,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 5342.999999999982,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 8.438303689132207e-9,
  "Z": 0.9040418973768898,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 2`] = `
Array [
  99.89814037698908,
  99.4225317645088,
  98.58079249584156,
  97.47135416720675,
  96.17665561268514,
  94.75021735382575,
  93.22412631325132,
  91.61755128436114,
  89.94259150223087,
  88.20770959415093,
  86.4195990416085,
  84.58415529460736,
  82.70696437894097,
  80.8789522430743,
  79.32098317247905,
  78.02148826733692,
  76.89899992135366,
  75.88736703334253,
  74.94517142388875,
  74.04903931300358,
  73.1864320113355,
  72.35076967925912,
  71.53859680949273,
  70.74812546887541,
  69.97946226704421,
  69.23512726465486,
  68.51711471735496,
  67.82605116816852,
  67.16181712859564,
  66.52395017459978,
  65.91183709895937,
  65.32480318833764,
  64.76215342253506,
  64.22319131797187,
  63.70722742426185,
  63.21358306950837,
]
`;
